--- a/src/app/components/pages/user-page/user-page.component.sass
+++ b/src/app/components/pages/user-page/user-page.component.sass
@@ -1,4 +1,7 @@
+@import "variables.sass"
+
 .profile-content
+  color: $mainColor
   padding: 6px
   #padding-left: 20px
   #border-left: 1px solid rgba(46,62,72,.12)
