Refactor some chat change logic

--- a/src/app/components/pages/chat/messages-page/messages-page.component.html
+++ b/src/app/components/pages/chat/messages-page/messages-page.component.html
@@ -4,11 +4,16 @@
       <div style="height: 100%; overflow-y: auto;">
         <div>
           <loader *ngIf="loading"></loader>
-          
+
           <div *ngIf="!loading && 0 === users.length" style="padding: 5px;">
             No matches yet.
           </div>
-          <div *ngFor="let user of users" class="chat-user-item" (click)="changeUser(user)" style="padding: 5px;" [ngClass]="{'not-seen': (user.notSeenCount > 0), 'active-chat': (activeUserId === user.id)}">
+          <div *ngFor="let user of users"
+               class="chat-user-item"
+               [ngClass]="{'not-seen': (user.notSeenCount > 0), 'active-chat': (getActiveUserId() === user.id)}"
+               style="padding: 5px;"
+               (click)="changeUser(user)"
+               >
             <img [src]="user.profileImage" class="rounded" style="width: 40px;" />
             {{user.name}}
           </div>
