--- a/src/app/components/user-item/user-item.component.html
+++ b/src/app/components/user-item/user-item.component.html
@@ -14,6 +14,6 @@
       </div>
     </div>
 
-    <span *ngIf="user.compatability" class="badge badge-pill badge-secondary" style="position: absolute; right: 5px; top: 5px;">{{user.compatability}}%</span>
+    <span *ngIf="user.compatability" class="badge badge-pill badge-secondary" title="Compatability percentage to me" style="position: absolute; right: 5px; top: 5px;">{{user.compatability}}%</span>
   </div>
 </div>
