--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,8 @@
   <div class="header shadow-sm">
     <div class="content">
       <div class="home-data">
-        <a routerLink="/settings"  style="font-weight: bold; color: rgba(46, 62, 72, 0.7); font-size: 20px; padding: 10px 0; display: inline-block;">
-          <span class="align-middle" style="margin-right: 5px;">&lt;name&gt;</span>
+        <a routerLink="/"  style="font-weight: bold; color: rgba(46, 62, 72, 0.7); font-size: 20px; padding: 10px 0; display: inline-block;">
+          <span class="align-middle" style="margin-right: 5px;">vinteres</span>
           <span class="align-middle badge badge-pill badge-primary" style="font-size: 12px; background-color: purple;">Beta</span>
         </a>
       </div>
