--- a/src/app/components/pages/sign-up-page/sign-up-page.component.html
+++ b/src/app/components/pages/sign-up-page/sign-up-page.component.html
@@ -1,5 +1,5 @@
 <div class="app-info">
-  <h2>Name
+  <h2>Vinteres
     <span class="align-middle badge badge-pill badge-primary" style="font-size: 12px; background-color: purple; margin-top: -10px;">Beta</span>
   </h2>
   Find love or friends.
