--- a/src/app/components/pages/sign-up-page/sign-up-page.component.html
+++ b/src/app/components/pages/sign-up-page/sign-up-page.component.html
@@ -1,10 +1,7 @@
+<app-title></app-title>
+
 <div class="app-info">
-  <h2>Vinteres
-    <span class="align-middle badge badge-pill badge-primary" style="font-size: 12px; background-color: purple; margin-top: -10px;">Beta</span>
-  </h2>
-  Find love or friends.
-  <br>
-  Match with people by personality and interests.
+  <app-info></app-info>
 </div>
 
 <div class="auth-cont border shadow-sm">
