Update onboarding page ui
Updated onboarding page styles and ui and removed some
commented styles.

--- a/src/app/components/pages/onboarding-page/onboarding-page.component.sass
+++ b/src/app/components/pages/onboarding-page/onboarding-page.component.sass
@@ -1,19 +1,19 @@
 .section-title
-  margin-bottom: 30px
+  padding: 10px 0 20px 0
+  margin: 0
 
 .onboarding-step-cont
   padding: 25px
   background-color: #fff
 
-.onboarding-step-cont.ob-small
-  width: 500px
+.ob-small
+  width: 600px
   margin: auto
 
 progress
   border-radius: 10px 
   width: 80%
   height: 30px
-  #box-shadow: 1px 1px 4px rgba( 0, 0, 0, 0.2 )
 
 progress::-webkit-progress-bar
   background-color: #aeb5ac
@@ -22,10 +22,16 @@ progress::-webkit-progress-bar
 progress::-webkit-progress-value
   background-color: #a2d498
   border-radius: 10px
-  #box-shadow: 1px 1px 5px 3px rgba( 255, 0, 0, 0.8 )
 
 .btn-cont
   position: relative
 
   button
     float: right
+
+.field-row-sep
+  margin-bottom: 40px
+
+.info-button-cont
+  margin-top: 20px
+  text-align: center
