--- a/src/app/components/pages/settings-page/settings-page.component.html
+++ b/src/app/components/pages/settings-page/settings-page.component.html
@@ -152,7 +152,7 @@
             <label><input type="radio" value="sometimes" name="drinking" formControlName="drinking">Socially</label>
           </div>
           <div class="radio disabled">
-            <label><input type="radio" value="never" name="drinking" formControlName="drinking">never</label>
+            <label><input type="radio" value="never" name="drinking" formControlName="drinking">Never</label>
           </div>
           <div>
             <small *ngIf="drinking.invalid && (drinking.dirty || drinking.touched)" class="text-danger">
