Updated responsive styles

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -65,7 +65,7 @@
   </div>
 </div>
 
-<div style="width: 840px; margin: auto; margin-top: 60px;">
+<div class="page-container">
   <router-outlet></router-outlet>
 </div>
 
