--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -81,7 +81,27 @@ $contentWidth: 1000px
   font-size: 17px
   display: inline-block
 
+.page-container
+  width: 840px
+  margin: auto
+  margin-top: 60px
+
 @media only screen and (max-width: 1240px)
   .left-menu
     position: initial
-    margin: 60px 50px 0 30px
+    width: 840px
+    margin: auto
+    margin-top: 60px
+
+@media only screen and (max-width: 1000px)
+  .header
+    .content
+      width: 100%
+      margin: 0
+
+@media only screen and (max-width: 840px)
+  .page-container
+    width: 100%
+
+  .left-menu
+    width: 100%
