Changed favicon and main color color to black

--- a/src/app/components/pages/user-page/user-page.component.sass
+++ b/src/app/components/pages/user-page/user-page.component.sass
@@ -67,8 +67,8 @@ button.vbtn
   font-weight: 600
   margin-right: 10px
   border-radius: 0
-  outline: 1px solid rgba(46, 62, 72, 0.4)
-  color: rgba(46, 62, 72, 0.7)
+  outline: 1px solid #000
+  color: #000
 
 .btn-decline:hover
   color: #fff
