--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -33,7 +33,7 @@ $contentWidth: 1000px
       padding: 10px 0
       display: inline-block
       font-size: 20px
-      color: rgba(46, 62, 72, 0.7)
+      color: #000
       text-decoration: none
 
 .dropdown-item:hover
