--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -94,4 +94,4 @@
 
 <notifier-container></notifier-container>
 
-<span style="position: fixed; bottom: 10px; right: 10px; cursor: default; font-size: 13px; color: #999999; text-align: right;">Created by Velizar</span>
+<span class="created-by-text">Created by Velizar</span>
