--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -86,12 +86,31 @@ $contentWidth: 1000px
   margin: auto
   margin-top: 60px
 
+.created-by-text
+  position: fixed
+  bottom: 10px
+  right: 10px
+  cursor: default
+  font-size: 13px
+  color: #999999
+  text-align: right
+
 @media only screen and (max-width: 1240px)
+  .created-by-text
+    display: none
+
+  .page-container
+    margin-top: 20px
+
   .left-menu
     position: initial
     width: 840px
     margin: auto
     margin-top: 60px
+    text-align: center
+
+    .item
+      display: inline-block
 
 @media only screen and (max-width: 1000px)
   .header
