--- a/src/app/components/pages/chat/messages-page/messages-page.component.html
+++ b/src/app/components/pages/chat/messages-page/messages-page.component.html
@@ -1,6 +1,6 @@
-<div style="height: 700px; overflow: hidden; position: fixed; top: 0; bottom: 0; height: 100%; width: 840px;">
-  <div class="rounded shadow-sm" style="background-color: #fff; height: auto; position: absolute; top: 60px; bottom: 10px; left: 0px; right: 0px; width: 100%; overflow: hidden; border: 1px solid #b0b0b0;">
-    <div style="width: 250px; height: 100%; border-right: 1px solid #b0b0b0; float: left;">
+<div class="msg-page-cont">
+  <div class="rounded shadow-sm inner-cont">
+    <div class="chat-members-cont">
       <div style="height: 100%; overflow-y: auto;">
         <div>
           <loader *ngIf="loading"></loader>
@@ -20,7 +20,7 @@
         </div>
       </div>
     </div>
-    <div style="width: 590px; height: 100%; margin-left: 250px; position: relative; background-color: #e8e8e8;">
+    <div class="chat-cont">
       <router-outlet></router-outlet>
     </div>
   </div>
