--- a/src/app/components/user-item/user-item.component.sass
+++ b/src/app/components/user-item/user-item.component.sass
@@ -6,12 +6,9 @@
   background-color: #fff
 
   .image-cont
-    position: relative
-    width: 200px
-    height: 200px
     img
-      width: 200px
-      height: 200px
+      width: 100%
+      height: 100%
 
     .img-text
       position: absolute
@@ -38,3 +35,16 @@
 
 .user-item:hover
   cursor: pointer
+
+
+@media only screen and (max-width: 840px)
+  .user-item
+    width: 32%
+
+@media only screen and (max-width: 750px)
+  .user-item
+    width: 48%
+
+@media only screen and (max-width: 500px)
+  .user-item
+    width: 100%
