Updated responsive styles on auth and onboarding pages

--- a/src/app/components/pages/login-page/login-page.component.sass
+++ b/src/app/components/pages/login-page/login-page.component.sass
@@ -14,3 +14,18 @@ input
 
 button
   width: 100%
+
+@media only screen and (max-width: 840px)
+  .app-info
+    position: static
+    margin: auto
+
+  .auth-cont
+    margin: auto
+
+@media only screen and (max-width: 430px)
+  .app-info
+    width: 100%
+
+  .auth-cont
+    width: 100%
