--- a/src/app/components/pages/onboarding-page/onboarding-page.component.sass
+++ b/src/app/components/pages/onboarding-page/onboarding-page.component.sass
@@ -35,3 +35,11 @@ progress::-webkit-progress-value
 .info-button-cont
   margin-top: 20px
   text-align: center
+
+@media only screen and (max-width: 1240px)
+  .section-title
+    margin-top: 35px
+
+@media only screen and (max-width: 600px)
+  .ob-small
+    width: 100%
