Updated auth page styles
Added background image on login and sign up pages and updated
intro page text.

--- a/src/app/components/misc/app-info/app-info.component.html
+++ b/src/app/components/misc/app-info/app-info.component.html
@@ -1,9 +1,9 @@
 <h1>
-  Find love or friends. Match with people by personality and interests.
+  Match with people by personality and interests. For meaningful relationships.
 </h1>
 <p>
   Automatically show people with hight compatability percentage to you.
-  Unlimited messages, send message, voice or video intro.
+  Unlimited messages, send text, voice or video intros.
   <br>
   <br>
   Completely free.
