--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -2,6 +2,21 @@
 
 $contentWidth: 1000px
 
+.page-cont
+  position: fixed
+  top: 0
+  left: 0
+  width: 100%
+  height: 100%
+  overflow: auto
+
+.bg-img
+  background-image: url("../assets/bg.jpeg")
+  -webkit-background-size: cover
+  -moz-background-size: cover
+  -o-background-size: cover
+  background-size: cover
+
 .header
   height: 50px
   width: 100%
