--- a/src/app/components/pages/login-page/login-page.component.html
+++ b/src/app/components/pages/login-page/login-page.component.html
@@ -1,31 +1,31 @@
-<app-title></app-title>
+<div class="page-cont shadow-sm">
+  <app-title></app-title>
+  <div class="app-info">
+    <app-info></app-info>
+  </div>
 
-<div class="app-info">
-  <app-info></app-info>
-</div>
+  <div class="auth-cont">
+    <div style="padding: 10px">
+      <h1>Sign in</h1>
 
-<div class="auth-cont border shadow-sm">
-  <div style="padding: 10px">
-    <h1>Sign in</h1>
-
-    <form (ngSubmit)="login(loginForm)" #loginForm="ngForm">
-      <div class="form-group inp-cont">
-        <input type="text" class="form-control" required [(ngModel)]="loginData.username" name="username" #username="ngModel"
+      <form (ngSubmit)="login(loginForm)" #loginForm="ngForm">
+        <div class="form-group inp-cont">
+          <input type="text" class="form-control" required [(ngModel)]="loginData.username" name="username" #username="ngModel"
           placeholder="Email" [readonly]="loading" required>
-        <small class="text-danger" *ngIf="(username.dirty || username.touched) && !username.valid">
-          Email is invalid.
-        </small>
-      </div>
-      <div class="form-group inp-cont">
-        <input type="password" class="form-control auth-inp" [(ngModel)]="loginData.password" name="password" #password="ngModel"
-               placeholder="Password" [readonly]="loading" required>
-        <small small class="text-danger" *ngIf="(password.dirty || password.touched) && !password.valid">
-          <div *ngIf="password.errors.required">Password is invalid.</div>
-          <div *ngIf="password.errors.invalidCredentials">Invalid username or password.</div>
-          <div *ngIf="password.errors.serverError">Server error.</div>
-        </small>
-      </div>
-      <button class="btn btn-primary" type="submit" [disabled]="loading">Login</button>
+          <small class="text-danger" *ngIf="(username.dirty || username.touched) && !username.valid">
+            Email is invalid.
+          </small>
+        </div>
+        <div class="form-group inp-cont">
+          <input type="password" class="form-control auth-inp" [(ngModel)]="loginData.password" name="password" #password="ngModel"
+          placeholder="Password" [readonly]="loading" required>
+          <small small class="text-danger" *ngIf="(password.dirty || password.touched) && !password.valid">
+            <div *ngIf="password.errors.required">Password is invalid.</div>
+            <div *ngIf="password.errors.invalidCredentials">Invalid username or password.</div>
+            <div *ngIf="password.errors.serverError">Server error.</div>
+          </small>
+        </div>
+        <button class="btn btn-primary" type="submit" [disabled]="loading">Login</button>
       <div style="text-align: center; margin: 10px 0">or</div>
       <button class="btn btn-success" type="button" (click)="signup()">Sign up</button>
     </form>
