--- a/src/app/components/pages/sign-up-page/sign-up-page.component.html
+++ b/src/app/components/pages/sign-up-page/sign-up-page.component.html
@@ -5,7 +5,7 @@
     <app-info></app-info>
   </div>
 
-  <div class="auth-cont border shadow-sm">
+  <div class="auth-cont">
     <div style="padding: 10px">
       <h1>Sign up</h1>
       <div *ngIf="!showForm">
