Fixed onboarding texts

--- a/src/app/components/pages/onboarding-page/onboarding-page.component.html
+++ b/src/app/components/pages/onboarding-page/onboarding-page.component.html
@@ -1,10 +1,9 @@
 <div *ngIf="1 == step && showIntroText">
   <h2 class="section-title">Onboarding</h2>
   <div class="alert alert-info" role="alert">
-    Please take some time as the onboarding process will take some time.
+    Please take some time as the onboarding process will take arond 10-20 min.
     <br>
-    There are 4 steps and the progress is save til your current step. If you can't finish the process at one go - you
-    can continue any time.
+    There are 4 steps and the progress is saved till your current step. You can return and continue any time.
   </div>
   <div class="info-button-cont">
     <button class="btn btn-primary" (click)="showIntroText = false">Start</button>
