--- a/src/app/components/pages/sign-up-page/sign-up-page.component.sass
+++ b/src/app/components/pages/sign-up-page/sign-up-page.component.sass
@@ -13,6 +13,15 @@
     margin-left: auto
     border-radius: 5px
 
+.alert
+  margin-top: 10px
+
+  .pwd-item
+    color: #000
+
+  fa-icon
+    color: green
+
 input
   padding: 25px 15px
 
