--- a/src/app/components/pages/login-page/login-page.component.sass
+++ b/src/app/components/pages/login-page/login-page.component.sass
@@ -18,6 +18,9 @@ input
 button
   width: 100%
 
+.error-inp
+  border: 1px solid red
+
 @media only screen and (max-width: 840px)
   .page-cont
     .app-info
