--- a/src/app/components/pages/sign-up-page/sign-up-page.component.html
+++ b/src/app/components/pages/sign-up-page/sign-up-page.component.html
@@ -16,8 +16,14 @@
       <div *ngIf="showForm">
         <form (ngSubmit)="signup(registerForm)" #registerForm="ngForm" [formGroup]="form">
           <div class="form-group inp-cont">
-            <input type="email" class="form-control" required formControlName="email" name="email"
-                  placeholder="Email" [readonly]="loading" required>
+            <input type="email"
+                   class="form-control"
+                   name="email"
+                   placeholder="Email"
+                   formControlName="email"
+                   [ngClass]="{'error-inp': ((email.dirty || email.touched) && !email.valid)}"
+                   [readonly]="loading"
+                   required>
 
             <small class="text-danger" *ngIf="(email.dirty || email.touched) && !email.valid" class="text-danger">
               <div *ngIf="email.hasError('required')">Email is required.</div>
@@ -26,15 +32,27 @@
             </small>
           </div>
           <div class="form-group inp-cont">
-            <input type="text" class="form-control" required formControlName="name" name="name"
-                  placeholder="Name" [readonly]="loading" required>
+            <input type="text"
+                   class="form-control"
+                   name="name"
+                   placeholder="Name"
+                   formControlName="name"
+                   [ngClass]="{'error-inp': ((name.dirty || name.touched) && !name.valid)}"
+                   [readonly]="loading"
+                   required>
             <small class="text-danger" *ngIf="(name.dirty || name.touched) && !name.valid" class="text-danger">
               Name is invalid.
             </small>
           </div>
           <div class="form-group inp-cont">
-            <input type="password" class="form-control auth-inp" formControlName="password" name="password"
-                  placeholder="Password" [readonly]="loading" required>
+            <input type="password"
+                   class="form-control auth-inp"
+                   name="password"
+                   placeholder="Password"
+                   formControlName="password"
+                   [ngClass]="{'error-inp': ((password.dirty || password.touched) && !password.valid)}"
+                   [readonly]="loading"
+                   required>
 
             <small class="text-danger" *ngIf="(password.dirty || password.touched) && !password.valid" class="text-danger">
               <div class="alert alert-warning">
@@ -58,8 +76,14 @@
             </small>
           </div>
           <div class="form-group inp-cont">
-            <input type="password" class="form-control auth-inp" formControlName="confirmPassword" name="confirmPassword"
-                  placeholder="Confirm password" [readonly]="loading" required>
+            <input type="password"
+                   class="form-control auth-inp"
+                   name="confirmPassword"
+                   placeholder="Confirm password"
+                   formControlName="confirmPassword"
+                   [ngClass]="{'error-inp': ((confirmPassword.dirty || confirmPassword.touched) && !confirmPassword.valid)}"
+                   [readonly]="loading"
+                   required>
 
             <small class="text-danger" *ngIf="(confirmPassword.dirty || confirmPassword.touched) && !confirmPassword.valid" class="text-danger">
               Confirm password
