--- a/src/app/components/pages/sign-up-page/sign-up-page.component.sass
+++ b/src/app/components/pages/sign-up-page/sign-up-page.component.sass
@@ -4,8 +4,9 @@
   border-radius: 5px
 
   .app-info
-    width: 420px
+    width: 400px
     margin-right: auto
+    margin-left: 10px
     position: absolute
 
   .auth-cont
