--- a/src/app/components/pages/compatabilities-page/compatabilities-page.component.html
+++ b/src/app/components/pages/compatabilities-page/compatabilities-page.component.html
@@ -1,5 +1,5 @@
 <h1>Compatabilities</h1>
-<h5>People with high compatabilities percentage to me.</h5>
+<h5>People with high compatability percentage to me.</h5>
 
 <loader *ngIf="loading"></loader>
 <div *ngIf="!loading && users.length == 0">
