--- a/src/app/components/pages/views-page/views-page.component.html
+++ b/src/app/components/pages/views-page/views-page.component.html
@@ -1,5 +1,5 @@
 <h1>Views</h1>
-<h5>People who viewed me.</h5>
+<h5>People who visited my profile.</h5>
 
 <loader *ngIf="loading"></loader>
 <div *ngIf="!loading && users.length == 0">
