--- a/src/app/components/pages/intro-page/intro-page.component.html
+++ b/src/app/components/pages/intro-page/intro-page.component.html
@@ -1,7 +1,15 @@
 <h1>Intros</h1>
 <h5>Intros that people have sent to you.</h5>
 
-<div *ngIf="!intros || 0 === intros.length">No intros.</div>
+<div *ngIf="!intros || 0 === intros.length">
+  <div class="alert alert-primary" role="alert">
+    You can <a routerLink="/find-people">find people</a> and send intros to them.
+    <br/>
+    Check people with <a routerLink="/compatabilities">higher compatability percentage</a> to you.
+  </div>
+
+  No intros yet.
+</div>
 
 <div *ngFor="let intro of intros; let ix = index" class="intro-item rounded">
   <div (mouseenter)="hover(ix, $event)" (mouseleave)="leave(ix)" style="width: 600px; ">
