--- a/src/app/components/pages/matches-page/matches-page.component.html
+++ b/src/app/components/pages/matches-page/matches-page.component.html
@@ -3,7 +3,9 @@
 <loader *ngIf="loading"></loader>
 <div *ngIf="!loading && users.length == 0">
   <div class="alert alert-primary" role="alert">
-    Send intros or like intros to get matches.
+    To get matched with someone <a routerLink="/intros">accept intros</a> sent to you or <a routerLink="/find-people">find people</a> and send intros to them.
+    <br/>
+    Check people with <a routerLink="/compatabilities">higher compatability percentage</a> to you.
   </div>
 
   No matches yet.
