Updated entry page text

--- a/src/app/components/misc/app-info/app-info.component.html
+++ b/src/app/components/misc/app-info/app-info.component.html
@@ -1,9 +1,9 @@
 <h1>
-  Match with people by personality and interests. For meaningful relationships.
+  Find and match with people by personality and interests.
 </h1>
 <p>
-  Automatically show people with hight compatability percentage to you.
-  Unlimited messages, send text, voice or video intros.
+  Because compatability matters.
+  Automatically show people with high compatability percentage to you.
   <br>
   <br>
   Completely free.
