--- a/src/app/components/pages/user-page/user-page.component.sass
+++ b/src/app/components/pages/user-page/user-page.component.sass
@@ -78,10 +78,8 @@ button.vbtn
   color: #fff
   background-color: green
 
-
 .add-image-item
   width: 150px
-  height: 150px
   float: left
   margin: 2px
   position: relative
@@ -146,3 +144,7 @@ pre
   word-wrap: break-word
   font-family: "BalsamiqSans", "arial", sans-serif
   margin: 5px
+
+@media only screen and (max-width: 990px)
+  .add-image-item
+    width: 100%
